samples/_failures_safe/1761346356_e590d5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_abab8353.c: In function ‘main’:
./samples/SAFE/__tmp_abab8353.c:170:5: error: expected expression at end of input
  170 |     printf("Compressed size: %d bytes\n",
      |     ^~~~~~
./samples/SAFE/__tmp_abab8353.c:170:5: error: expected declaration or statement at end of input
